# comptext-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CREATE_REPO.md  Cargo.toml  MANIFEST.json  PROJEKT.md  README.md  comptext.example.toml
assets/: README.md
docs/: AGENT_OPERATING_MODEL.md  AGENT_STATE_CONTRACT.md  ANTIGRAVITY_AUTONOMY_MODEL.md  ANTIGRAVITY_CLI_INTEGRATION.md  ANTIGRAVITY_PLUGIN_BUNDLE.md  APPLY_GATE.md  ARCHITECTURE.md  ARTIFACT_POLICY.md  CONTEXT_PACK_CONTRACT.md  EVIDENCE_CONTROL_PLANE.md  EXECUTION_MONITORING.md  HOOK_GOVERNANCE.md  HOOK_PERMISSION_INTEGRATION.md  LONG_RUN_AUTONOMY.md  MCP_AND_SKILLS_PLAN.md  MCP_PROVIDER_BOUNDARY.md  MVP_STATUS.md  PERMISSIONS_MODEL.md  POLICY_INTERCEPTOR_SPEC.md  PROPOSAL_MODE.md  PROVENANCE_MODEL.md  PROVIDER_ADAPTERS.md  PROVIDER_CONFIG.md  RELEASE_CHECKLIST.md  ROADMAP.md  RUNTIME_PERMISSION_TEMPLATE.md  SECURITY_MODEL.md  SKILL_AUTHORING_GUIDE.md  SKILL_BUNDLE_REGISTRY.md  SUBAGENT_GOVERNANCE.md  TOKEN_ECONOMY.md  VALIDATE_BENCHMARK.md
mcp/: mcp_config.example.json
prompts/: AGY_00_REPO_GENESIS.md  AGY_01_CONTEXT_PACK.md  AGY_02_DUMMY_PROVIDER.md  AGY_03_PROPOSAL_APPLY_GATE.md
proposals/: proposal.latest.json  proposal_add_context_inspect.json
reports/: PHASE_REPORT_TEMPLATE.md  README.md  bootstrap_status.md  phase_10_status.md  phase_11_status.md  phase_12_status.md  phase_13_status.md  phase_14_status.md  phase_15_status.md  phase_16_status.md  phase_17_status.md  phase_1_2_status.md  phase_3_status.md  phase_4_status.md  phase_4b_status.md  phase_4c_status.md  phase_5_status.md  phase_6_status.md  (+3 more)
(+48 files in other folders)
