[package]
name = "comptext-cli"
version = "0.1.0"
edition = "2021"
description = "Experimental terminal context client for deterministic Context Packs."
license = "MIT"
repository = "https://github.com/ProfRandom92/comptext-cli"

[[bin]]
name = "ctxt"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.9"
